[package]
name = "perf_vrl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1", default-features = false }
value = { path = "../../lib/value" }
vector_common = { path = "../../lib/vector-common" }
vector_core = { path = "../../lib/vector-core", features = ["vrl"] }
vrl = { path = "../../lib/vrl/vrl" }
vrl-stdlib = { path = "../../lib/vrl/stdlib" }
