[package]
name = "codecs"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[[bin]]
name = "generate-avro-fixtures"
path = "tests/bin/generate-avro-fixtures.rs"

[dependencies]
apache-avro = { version = "0.16.0", default-features = false }
bytes.workspace = true
chrono.workspace = true
csv-core = { version = "0.1.12", default-features = false }
derivative.workspace = true
dyn-clone = { version = "1", default-features = false }
flate2.workspace = true
influxdb-line-protocol = { version = "2", default-features = false }
lookup = { package = "vector-lookup", path = "../vector-lookup", default-features = false, features = ["test"] }
memchr = { version = "2", default-features = false }
ordered-float.workspace = true
prost.workspace = true
prost-reflect.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_with = { version = "3.14.0", default-features = false, features = ["std", "macros", "chrono_0_4"] }
serde_json.workspace = true
smallvec = { version = "1", default-features = false, features = ["union"] }
snafu.workspace = true
syslog_loose = { version = "0.22", default-features = false, optional = true }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
vrl.workspace = true
vector-common = { path = "../vector-common", default-features = false }
vector-config = { path = "../vector-config", default-features = false }
vector-config-macros = { path = "../vector-config-macros", default-features = false }
vector-core = { path = "../vector-core", default-features = false, features = ["vrl"] }

[dev-dependencies]
futures.workspace = true
indoc.workspace = true
tokio = { workspace = true, features = ["test-util"] }
similar-asserts = "1.7.0"
vector-core = { path = "../vector-core", default-features = false, features = ["vrl", "test"] }
rstest = "0.26.1"
tracing-test = "0.2.5"
uuid.workspace = true
vrl.workspace = true

[features]
syslog = ["dep:syslog_loose"]
