[package]
name = "config-schema"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.66", default-features = false, features = ["std"] }
once_cell = { version = "1", default-features = false }
schemars = { version = "0.8.11", default-features = true, features = ["preserve_order"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0.87", default-features = false }
snafu = { version = "0.7", default-features = false, features = ["std"] }
tracing = { version = "0.1.34", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["ansi", "env-filter", "fmt", "json", "registry", "tracing-log"] }
vector-config = { path = "../vector-config" }
vector-config-common = { path = "../vector-config-common" }
