[package]
name = "dnsmsg-parser"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false
license = "MIT"

[dependencies]
data-encoding = "2.8"
hickory-proto.workspace = true
snafu.workspace = true

[dev-dependencies]
criterion = "0.5"

[lib]
bench = false

[[bench]]
name = "benches"
harness = false
