[package]
name = "dnsmsg-parser"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2024"
publish = false
license = "MIT"

[lints.clippy]
unwrap-used = "forbid"

[dependencies]
data-encoding = "2.9"
hickory-proto.workspace = true
snafu.workspace = true

[dev-dependencies]
criterion = "0.7"

[lib]
bench = false

[[bench]]
name = "benches"
harness = false
