[package]
name = "dnstap-parser"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2024"
publish = false
license = "MIT"

[dependencies]
base64.workspace = true
bytes = { workspace = true, features = ["serde"] }
chrono.workspace = true
dnsmsg-parser = { path = "../dnsmsg-parser" }
hickory-proto.workspace = true
prost.workspace = true
snafu.workspace = true
tracing.workspace = true
vector-config.workspace = true
vector-common = { path = "../vector-common" }
vector-lookup = { path = "../vector-lookup", features = ["test"] }
vector-core = { path = "../vector-core" }
vrl.workspace = true
paste.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
anyhow.workspace = true
chrono-tz.workspace = true
