[package]
name = "docs-renderer"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.79", default-features = false, features = ["std"] }
serde.workspace = true
serde_json.workspace = true
snafu = { version = "0.7.5", default-features = false }
tracing = { version = "0.1.34", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter", "fmt", "json", "registry", "tracing-log"] }
vector-config = { path = "../vector-config" }
vector-config-common = { path = "../vector-config-common" }
