[package]
name = "docs-renderer"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
vector-config = { path = "../vector-config" }
vector-config-common = { path = "../vector-config-common" }
