[package]
name = "enrichment"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
arc-swap = { version = "1.7.1", default-features = false }
chrono.workspace = true
dyn-clone = { version = "1.0.17", default-features = false }
vrl.workspace = true
