[package]
name = "envoy-proto"
version = "0.0.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[build-dependencies]
prost-build = { version = "0.11.3", default-features = false}
tonic-build = { version = "0.8", default-features = false, features = ["prost", "transport"] }

[dependencies]
tonic = { version = "0.8", default-features = false, features = ["codegen", "gzip", "prost", "tls", "tls-roots", "transport"] }
chrono = { version = "0.4.22", default-features = false, features = ["serde"] }
prost = { version = "0.11.3", default-features = false, features = ["std"] }
prost-types = { version = "0.11.2", default-features = false, features = ["std"] }
vector-core = { path = "../vector-core", default-features = false }
value = { path = "../value" }
ordered-float = { version = "3.4.0", default-features = false }
