[package]
name = "file-source-common"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>", "Mark Story <mark@mark-story.com>"]
edition = "2024"
publish = false
license = "MIT"

[target.'cfg(windows)'.dependencies]
libc.workspace = true
winapi = { version = "0.3", features = ["winioctl"] }

[dependencies]
glob.workspace = true
chrono.workspace = true
tracing.workspace = true
crc = "3.3.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.143", default-features = false }
bstr = { version = "1.12", default-features = false }
bytes = { version = "1.10.1", default-features = false, features = ["serde"] }
dashmap = { version = "6.1", default-features = false }
async-compression = { version = "0.4.27", features = ["tokio", "gzip"] }
vector-common = { path = "../vector-common", default-features = false }
vector-config = { path = "../vector-config", default-features = false }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
quickcheck = "1"
tempfile.workspace = true
similar-asserts = "1.7.0"
