[package]
name = "file-source"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>", "Mark Story <mark@mark-story.com>"]
edition = "2021"
publish = false
license = "MIT"

[target.'cfg(windows)'.dependencies]
libc = "0.2"
winapi = { version = "0.3", features = ["winioctl"] }

[dependencies]
glob.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
indexmap = { version = "2.10.0", default-features = false, features = ["serde"] }
bytes.workspace = true
flate2 = { version = "1.1.2", default-features = false, features = ["rust_backend"] }
futures = { version = "0.3.31", default-features = false, features = ["executor"] }
vector-common = { path = "../vector-common", default-features = false }
file-source-common = { path = "../file-source-common" }

[dev-dependencies]
criterion = "0.7"
quickcheck = "1"
tempfile.workspace = true
similar-asserts = "1.7.0"

[[bench]]
name = "buffer"
harness = false
