[package]
name = "k8s-e2e-tests"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
description = "End-to-end tests of Vector in the Kubernetes environment"
publish = false
license = "MPL-2.0"

[dependencies]
futures = "0.3"
k8s-openapi = { version = "0.16.0", default-features = false, features = ["v1_19"] }
k8s-test-framework = { version = "0.1", path = "../k8s-test-framework" }
regex = "1"
reqwest = { version = "0.11.26", features = ["json"] }
serde_json.workspace = true
tokio = { version = "1.44.2", features = ["full"] }
indoc.workspace = true
env_logger = "0.11"
tracing = { version = "0.1", features = ["log"] }
rand.workspace = true

[features]
e2e-tests = []

[[test]]
name = "vector-agent"
required-features = ["e2e-tests"]

[[test]]
name = "vector-aggregator"
required-features = ["e2e-tests"]

[[test]]
name = "vector-dd-agent-aggregator"
required-features = ["e2e-tests"]

[[test]]
name = "vector"
required-features = ["e2e-tests"]
