[package]
name = "k8s-e2e-tests"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
description = "End-to-end tests of Vector in the Kubernetes environment"
publish = false
license = "MPL-2.0"

[dependencies]
futures.workspace = true
k8s-openapi = { version = "0.16.0", default-features = false, features = ["v1_19"] }
k8s-test-framework = { version = "0.1", path = "../k8s-test-framework" }
regex = { workspace = true, default-features = true }
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
indoc.workspace = true
env_logger = "0.11"
tracing = { workspace = true, features = ["log"] }
rand.workspace = true

[features]
e2e-tests = []

[[test]]
name = "vector-agent"
required-features = ["e2e-tests"]

[[test]]
name = "vector-aggregator"
required-features = ["e2e-tests"]

[[test]]
name = "vector-dd-agent-aggregator"
required-features = ["e2e-tests"]

[[test]]
name = "vector"
required-features = ["e2e-tests"]
