[package]
name = "k8s-test-framework"
version = "0.1.0"
authors = ["Vector Contributors <vector@timber.io>"]
edition = "2021"
description = "Kubernetes Test Framework used to test Vector in Kubernetes"
publish = false
license = "MPL-2.0"

[dependencies]
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_16"] }
once_cell = "1"
serde_json = "1"
tempfile = "3"
tokio = { git = "https://github.com/tokio-rs/tokio.git", rev = "49192be3de9fbac56b3db026a438640f0b27f0e5", features = ["full"] }
log = "0.4"
