[package]
name = "k8s-test-framework"
version = "0.1.0"
authors = ["Vector Contributors <vector@timber.io>"]
edition = "2021"
description = "Kubernetes Test Framework used to test Vector in Kubernetes"
publish = false
license = "MPL-2.0"

[dependencies]
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_16"] }
once_cell = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1.16.1", features = ["full"] }
log = "0.4"
