[package]
name = "k8s-test-framework"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
description = "Kubernetes Test Framework used to test Vector in Kubernetes"
publish = false
license = "MPL-2.0"

[dependencies]
k8s-openapi = { version = "0.16.0", default-features = false, features = ["v1_19"] }
serde_json.workspace = true
tempfile = "3"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4"
