[package]
name = "kubernetes-test-framework"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "Kubernetes Test Framework used to test Vector in Kubernetes"

[dependencies]
k8s-openapi = { version = "0.9", default-features = false, features = ["v1_15"] }
serde_json = "1"
tempfile = "3"
once_cell = "1"
tokio = { version = "0.2", features = ["process", "io-util"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
