[package]
name = "loki-logproto"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.12", default-features = false, features = ["std"] }
prost-types = { version = "0.12", default-features = false, features = ["std"] }

[dev-dependencies]
chrono = "0.4"

[build-dependencies]
prost-build = { version = "0.12" }
