[package]
name = "loki-logproto"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.13", default-features = false, features = ["std"] }
prost-types = { version = "0.13", default-features = false, features = ["std"] }
bytes = { version = "1.7.2", default-features = false }
snap = { version = "1.1.1", default-features = false }

[dev-dependencies]
chrono.workspace = true

[build-dependencies]
prost-build = { version = "0.13" }
