[package]
name = "lookup"
version = "0.1.0"
authors = ["Vector Contributors <vector@timber.io>"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
snafu = { version = "0.7", default-features = false }
regex = { version = "1.5.4", default-features = false, features = ["std", "perf"] }
inherent = "1.0"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
lazy_static = "1.3.0"
quickcheck = { version = "1.0.3", optional = true }

[dev-dependencies]
serde_json = { version = "1.0.78", features = ["raw_value"] }
quickcheck = { version = "1.0.3" }

[build-dependencies]
lalrpop = "0.19.7"

[features]
arbitrary = ["quickcheck"]
