[package]
name = "lookup"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.138", default-features = false, features = ["derive", "alloc"] }
snafu = { version = "0.7", default-features = false }
regex = { version = "1.6.0", default-features = false, features = ["std", "perf"] }
inherent = "1.0"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
once_cell = { version = "1.13" }
quickcheck = { version = "1.0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports", "async_tokio"] }
serde_json = { version = "1.0.82", features = ["raw_value"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
quickcheck = { version = "1.0.3" }

[build-dependencies]
lalrpop = "0.19.8"

[features]
arbitrary = ["dep:quickcheck"]

[[bench]]
name = "lookup"
path = "benches/lookup.rs"
harness = false
test = false
required-features = []
