[package]
name = "lookup"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0.152", default-features = false, features = ["derive", "alloc"] }
snafu = { version = "0.7", default-features = false }
regex = { version = "1.7.1", default-features = false, features = ["std", "perf"] }
inherent = "1.0"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
once_cell = { version = "1.17" }
quickcheck = { version = "1.0.3", optional = true }
vector-config = { path = "../vector-config" }
vector-config-macros = { path = "../vector-config-macros" }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports", "async_tokio"] }
serde_json = { version = "1.0.91", features = ["raw_value"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
quickcheck = { version = "1.0.3" }

[build-dependencies]
lalrpop = "0.19.8"

[features]
arbitrary = ["dep:quickcheck"]

[[bench]]
name = "lookup"
path = "benches/lookup.rs"
harness = false
test = false
required-features = []
