[package]
name = "opentelemetry-proto"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true

[dependencies]
bytes = { version = "1.10.1", default-features = false, features = ["serde"] }
chrono.workspace = true
hex = { version = "0.4.3", default-features = false, features = ["std"] }
lookup = { package = "vector-lookup", path = "../vector-lookup", default-features = false }
ordered-float = { version = "4.6.0", default-features = false }
prost.workspace = true
tonic.workspace = true
vrl.workspace = true
vector-core = { path = "../vector-core", default-features = false }
serde_json = { version = "1.0.140", optional = true, features = [
  "raw_value",
  "std",
] }
serde = { version = "1.0.219", optional = true, default-features = false, features = [
  "alloc",
  "derive",
  "rc",
] }

[features]
default = ["full"]
full = ["with-serde"]

with-serde = ['serde', 'serde_json']
