[package]
name = "parsing"
version = "0.1.0"
authors = ["Vector Contributors <vector@timber.io>"]
edition = "2018"

[dependencies]
nom = "6.0.1"
bytes = "1.0.0"
form_urlencoded = "1.0.0"
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
serde_json = { version = "1" }
chrono = "0.4"
vrl-core = { package = "vrl", path = "../vrl/core", optional = true }

# Internal
shared = { path = "../shared" }
lookup = { path = "../lookup" }

[features]
default = []
vrl = ["vrl-core"]
