[package]
name = "parsing"
version = "0.1.0"
authors = ["Vector Contributors <vector@timber.io>"]
edition = "2018"

[dependencies]
nom = { version = "6.0.1" }
bytes = { version = "1.0.0", default-features = false }
form_urlencoded = { version = "1.0.0", default-features = false }
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
vrl-core = { package = "vrl", path = "../vrl/core", optional = true }

# Internal
shared = { path = "../shared" }

[features]
default = []
vrl = ["vrl-core"]
